--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,5 @@
 .main {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
   min-height: 100vh;
 }
