build responsive main layout

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,2 +1,28 @@
 .main {
+  display: flex;
+  align-items: stretch;
+  flex-grow: 1;
+}
+
+.flexItem {
+  flex-grow: 1;
+}
+
+.shadowed {
+  border-radius: 10px;
+  box-shadow:
+    0 4px 8px rgba(0, 0, 0, 0.1),
+    0 6px 20px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+}
+
+/* Change the layout direction for tablets and smaller devices */
+@media (max-width: 768px) {
+  .main {
+    flex-direction: column;
+  }
+
+  .shadowed {
+    margin: 10px;
+  }
 }
