--- a/app/styles.css
+++ b/app/styles.css
@@ -26,6 +26,11 @@ dd {
   margin: 0;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role='list'],
 ol[role='list'] {
