--- a/app/ui/components/questionsList/questionsList.module.css
+++ b/app/ui/components/questionsList/questionsList.module.css
@@ -1,5 +1,11 @@
 .container {
   padding: 10px;
-  max-height: 50%;
+  max-height: 400px;
   overflow-y: scroll;
+  box-shadow:
+    inset 0 2px 4px rgba(0, 0, 0, 0.1),
+    inset 0 -2px 4px rgba(255, 255, 255, 0.7),
+    inset 2px 0 4px rgba(0, 0, 0, 0.1),
+    inset -2px 0 4px rgba(255, 255, 255, 0.7);
+  border-radius: 8px;
 }
