--- a/app/ui/components/questionsSection/questionsSection.module.css
+++ b/app/ui/components/questionsSection/questionsSection.module.css
@@ -2,3 +2,9 @@
   width: 100%;
   height: 100%;
 }
+
+.buttonsContainer {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-around;
+}
