--- a/app/ui/components/button/button.module.css
+++ b/app/ui/components/button/button.module.css
@@ -4,7 +4,7 @@
   border-radius: 8px;
   border: none;
   color: white;
-  padding: 10px 15px;
+  padding: 10px 12px;
   font-size: 20px;
   font-weight: 500;
   max-width: 300px;
@@ -19,4 +19,16 @@
 .button:hover {
   cursor: pointer;
   opacity: 0.8;
+}
+
+@media (max-width: 900px) {
+  .button {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 500px) {
+  .button {
+    font-size: 13px;
+  }
 }
