--- a/app/ui/components/questionsSection/questionsSection.module.css
+++ b/app/ui/components/questionsSection/questionsSection.module.css
@@ -1,10 +1,14 @@
 .container {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .buttonsContainer {
   margin-top: 10px;
   display: flex;
   justify-content: space-around;
+  width: 100%;
 }
