--- a/app/ui/components/button/button.module.css
+++ b/app/ui/components/button/button.module.css
@@ -1,24 +1,27 @@
 .button {
-  /* the color is used for multiple buttons at studocu.com */
-  background-color: #3092fa;
+  color: #181717;
+  border: 2px lightseagreen dashed;
   border-radius: 8px;
-  border: none;
-  color: white;
   padding: 10px 12px;
   font-size: 20px;
   font-weight: 500;
   max-width: 300px;
   align-self: center;
-  margin-top: 10px;
+  background-color: transparent;
 }
 
 .red {
-  background-color: rgb(179, 57, 57);
+  border: 2px rgb(178, 44, 32) dashed;
+}
+
+.xs {
+  font-size: 10px;
+  padding: 5px 6px;
 }
 
 .button:hover {
   cursor: pointer;
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 @media (max-width: 900px) {
@@ -30,5 +33,9 @@
 @media (max-width: 500px) {
   .button {
     font-size: 13px;
+  }
+  .xs {
+    font-size: 8px;
+    padding: 4px 5px;
   }
 }
