--- a/app/ui/components/question/question.module.css
+++ b/app/ui/components/question/question.module.css
@@ -3,6 +3,16 @@
   border-bottom: 1px lightgrey dashed;
 }
 
+.questionAndButtons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons {
+  display: flex;
+  align-items: flex-start;
+}
+
 .question {
   font-size: 18px;
   font-weight: 500;
@@ -17,4 +27,13 @@
 .answer {
   font-size: 16px;
   line-height: 2;
+}
+
+@media (max-width: 500px) {
+  .question {
+    line-height: 1.5;
+  }
+  .answer {
+    line-height: 1.5;
+  }
 }
