--- a/app/styles.css
+++ b/app/styles.css
@@ -26,11 +26,6 @@ dd {
   margin: 0;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-}
-
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role='list'],
 ol[role='list'] {
@@ -41,6 +36,9 @@ ol[role='list'] {
 body {
   min-height: 100vh;
   line-height: 1.5;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Set shorter line heights on headings and interactive elements */
