--- a/app/ui/components/pageSection/pageSection.module.css
+++ b/app/ui/components/pageSection/pageSection.module.css
@@ -1,17 +1,16 @@
 .section {
   padding: 15px;
-  width: 50%;
+  width: 45%;
   border-radius: 10px;
   box-shadow:
     0 4px 8px rgba(0, 0, 0, 0.1),
     0 6px 20px rgba(0, 0, 0, 0.1);
-  margin: 20px;
 }
 
 /* reduce the margin for smaller devices */
 @media (max-width: 768px) {
   .section {
-    margin: 10px;
-    width: 90%;
+    width: 85%;
+    margin-bottom: 12px;
   }
 }
